# projek_sbd

./: .gitignore  package.json
api/: config.py  launcher.py  pyproject.toml
api/lib/db/: __init__.py  db.py
api/lib/server/: __init__.py
api/tests/: test_flask_mysql_serv.py
src/: App.jsx  index.css  index.js
src/Components/: Chat.jsx  ChildBar.jsx  FuncButton.jsx  Notification.jsx  SearchBar.jsx  Table.jsx  UserProfileDropdown.jsx  deleteUser.jsx
src/Components/Devs/: UserList.jsx
src/Containers/: Footer.jsx  Header.jsx  NavBar.jsx  SetCon.jsx  SideBar.jsx  ThemePopup.jsx  index.jsx
src/Contexts/: ContextProvider.js
src/Data/: dummy.js
src/Pages/: LandingPage.jsx  LoginPage.jsx  NotFound.jsx  RegistrationPage.jsx
src/Pages/Devs/: DevUserList.jsx
